--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -27,5 +27,10 @@
         <members>Financial_Product__c </members>
         <members>Regulatory_Report__c </members>
     </types>
+
+    <types>
+        <name>CustomApplication</name>
+        <members>Fin_Tech</members>
+    </types>
     <version>61.0</version>
 </Package>
