--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <name>ApexClass</name>
-        <members>LoanController</members>
-        <members>LoanService</members>
-        <members>LoanDomain</members>
-        <members>LoanRepository</members>
-        <members>LoanQueueable</members>
-        <members>PaymentPlanQueueable</members>
-        <members>ResponseWrapper</members>
+        <name>CustomApplication</name>
+        <members>Fin_Tech</members>
     </types>
 
     <types>
@@ -31,13 +25,28 @@
     </types>
 
     <types>
+        <name>ApexClass</name>
+        <members>LoanController</members>
+        <members>LoanService</members>
+        <members>LoanDomain</members>
+        <members>LoanRepository</members>
+        <members>LoanQueueable</members>
+        <members>PaymentPlanQueueable</members>
+        <members>LoanTriggerHandler</members>
+        <members>PaymentPlanTriggerHandler</members>
+        <members>ResponseWrapper</members>
+    </types>
+
+    <types>
+        <name>ApexTrigger</name>
+        <members>LoanTrigger</members>
+        <members>PaymentPlanTrigger</members>
+    </types>
+
+    <types>
         <name>Flow</name>
         <members>Invocable_LoanTermAdjustment</members>
     </types>
 
-    <types>
-        <name>CustomApplication</name>
-        <members>Fin_Tech</members>
-    </types>
     <version>61.0</version>
 </Package>
